# translatee

./: .gitignore  README.md  pm2.json  pyproject.toml  ruff.toml  run.py
l10n/: en-US.yml  zh-TW.yml
translatee/: api_translator.py  bot.py  bot_translator.py  constants.py  types.py
translatee/cogs/: settings.py  translate.py
translatee/db/: models.py
